# synaptica-web

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.research  LICENSE  Makefile  README.md  alembic.ini  docker-entrypoint-api.sh  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
agent_metadata/: data-agent-001.json  ewe23e32e.json
alembic/: env.py
api/: main.py  pipeline.py
docs/: PHASE0_HANDOFF.md  PHASE1_HANDOFF.md  Research-Agents.md
frontend/: README.md  next.config.js  package.json
scripts/: compile_identity_registry.py  create_agent_wallets.py  demo_full_pipeline.py  demo_research_pipeline.py  deploy_identity_registry.py  generate_agent_metadata.py  generate_remaining_agents.py  interactive_db_viewer.py  list_all_agents.py  manage_reputation.py  refresh_registry_cache.py  register_agents_on_chain.py  register_agents_with_metadata.py  register_all_agents.py  run_executor_agent.py  serve_metadata.py  sync_agents_from_registry.py  test_openai_integration.py  upload_to_ipfs_cli.sh  upload_to_pinata.py  upload_to_web3storage.py  view_artifacts.py  view_latest_pipeline.py
shared/: agent_base.py  agent_utils.py  agents_cache.py  hol_agent_usability.py  hol_client.py  openai_agent.py  registry_sync.py  strands_openai_agent.py
tests/: conftest.py  test_agents_api.py  test_data_agent_api.py  test_deep_research.py  test_hedera_client.py  test_hol_registration.py  test_phase0_runtime.py  test_registry_endpoint_overrides.py  test_research_catalog.py  test_research_runs.py  (+1 more)
(+134 files in other folders)
